# dynamicapi

./: .editorconfig  .gitignore  .gptignore  .pre-commit-config.yaml  README.MD  gptprompt.md  pyproject.toml
.github/workflows/: tests.yml
dyapi/: __init__.py
dyapi/entities/: endpoint_settings.py  model_settings.py
dyapi/implementations/builders/: api.py  crud.py  endpoint.py  model.py
dyapi/implementations/storages/postgres/: base.py  manager.py
dyapi/interfaces/builders/: api.py  crud.py  endpoint.py  model.py
dyapi/interfaces/storages/: base.py  manager.py
examples/: app.py  app_engine.py  app_models.py  app_models_from_table.py  app_session.py  config.py
src/entities/: config.py  endpoint_settings.py  pagination.py
src/implementations/builders/: api.py  crud.py  endpoint.py  model.py
src/implementations/storages/: exceptions.py
src/implementations/storages/postgres/: base.py  manager.py
src/interfaces/builders/: api.py  crud.py  endpoint.py  model.py
src/interfaces/storages/: __init__.py  base.py  manager.py
tests/: conftest.py
tests/fixtures/: api_builder.py  config.py  crud_builder.py  endpoint_builder.py  model_builder.py  postgres_storage.py
tests/src/implementations/builders/: test_api.py  test_crud.py  test_endpoint.py  test_model.py
tests/src/implementations/storages/postgres/: test_base.py
